<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".DettagliSquadra" >

    <TextView
        android:id="@+id/textView1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/intro_squadra"
        android:textSize="20sp" />

    <EditText
        android:id="@+id/nome_squadra"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/textView1"
        android:layout_below="@+id/textView1"
        android:layout_marginTop="8dp"
        android:ems="10"
        android:hint="@string/nome_squadra_hint" >

        <requestFocus />
    </EditText>

    <EditText
        android:id="@+id/nome_lega"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/nome_squadra"
        android:layout_below="@+id/nome_squadra"
        android:layout_marginTop="8dp"
        android:ems="10"
        android:hint="@string/nome_lega_hint" />

    <TextView
        android:id="@+id/label_portieri"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:textSize="16sp"
        android:layout_alignLeft="@+id/nome_lega"
        android:layout_below="@+id/nome_lega"
        android:text="@string/num_portieri_label" />

    <TextView
        android:id="@+id/label_difensori"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:textSize="16sp"
        android:layout_alignLeft="@+id/label_portieri"
        android:layout_below="@+id/spinner_portieri"
        android:text="@string/num_difensori_label" />

    <TextView
        android:id="@+id/label_centrocampisti"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:textSize="16sp"
        android:layout_alignLeft="@+id/label_difensori"
        android:layout_below="@+id/spinner_difensori"
        android:text="@string/num_centrocampisti_label" />

    <TextView
        android:id="@+id/label_attaccanti"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:textSize="16sp"
        android:layout_alignLeft="@+id/label_centrocampisti"
        android:layout_below="@+id/spinner_centrocampisti"
        android:text="@string/num_attaccanti_label" />

    <Spinner
        android:id="@+id/spinner_portieri"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentRight="true"
        android:layout_alignTop="@+id/label_portieri" />

    <Spinner
        android:id="@+id/spinner_difensori"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentRight="true"
        android:layout_alignTop="@+id/label_difensori" />

    <Spinner
        android:id="@+id/spinner_centrocampisti"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentRight="true"
        android:layout_alignTop="@+id/label_centrocampisti" />

    <Spinner
        android:id="@+id/spinner_attaccanti"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentRight="true"
        android:layout_alignTop="@+id/label_attaccanti" />

    <Button
        android:id="@+id/salva_squadra_button"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:layout_marginTop="8dp"
        android:layout_below="@+id/spinner_attaccanti"
        android:text="@string/salva_squadra" />

</RelativeLayout>