<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:orientation="vertical" >

    <ImageView
        android:id="@+id/logo"
        android:contentDescription="@string/logo_squadra"
        android:layout_width="24dip"
        android:layout_height="24dip"
        android:layout_centerVertical="true"
        android:layout_margin="5dip" />

    <TextView
        android:id="@+id/squadra"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_toRightOf="@id/logo"
        android:textSize="22sp" />

    <TextView
        android:id="@+id/lega"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_below="@id/squadra"
        android:layout_toRightOf="@id/logo"
        android:textSize="14sp" />

    <ImageView
        android:id="@+id/eliminaSquadra"
        android:contentDescription="@string/elimina_squadra"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentRight="true"
        android:layout_centerVertical="true"
        android:layout_margin="5dip" />
    
    <ImageView
        android:id="@+id/modificaRosa"
        android:src="@drawable/rosa"
        android:contentDescription="@string/modifica_rosa"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentRight="true"
        android:layout_centerVertical="true"
        android:layout_margin="5dip" />

</RelativeLayout>