<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".AggiungiGiocatore" >

    <Spinner
        android:id="@+id/ruoloSpinner"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true" />

    <EditText
        android:id="@+id/nomeGiocatore"
        android:hint="@string/nome_giocatore"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/ruoloSpinner"
        android:layout_below="@+id/ruoloSpinner"
        android:layout_marginTop="8dp"
        android:ems="10" >

        <requestFocus />
    </EditText>

    <EditText
        android:id="@+id/squadraDoveGioca"
        android:hint="@string/squadraDoveGioca"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/nomeGiocatore"
        android:layout_below="@+id/nomeGiocatore"
        android:layout_marginTop="8dp"
        android:ems="10" />

    <Button
        android:id="@+id/salvaGiocatoreBtn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignRight="@+id/ruoloSpinner"
        android:layout_below="@+id/squadraDoveGioca"
        android:text="@string/salva_giocatore"
        android:layout_marginTop="8dp" />

</RelativeLayout>
